Migrate to RCVBUF_ALLOCATOR_USE_BUFFER